# carbonsim-online

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  README.md  activeContext.md  pytest.ini  requirements.txt  start.bat
.claude/: settings.local.json
carbonsim_engine/: __init__.py  cards.py  coop.py  engine.py  pyproject.toml  scenarios.py  solo.py
carbonsim_engine/data/: card_schema.json  starter_deck.json
carbonsim_engine/scripts/: validate_deck.py
carbonsim_engine/tests/: test_cards.py  test_engine.py
docs/: PLAYTEST.md  STRUCTURE.md  design-language.md  engine-surface-map.md
engine/: __init__.py  achievements.py  agents.py  cards.py  constants.py  coop.py  engine.py  playtest.py  pyproject.toml  scenarios.py  solo.py  tutorial.py
mayor_api/: db.py  main.py  mayor.db  models.py  ws.py
mayor_web/: coop.html  game.html  index.html  summary.html
plan/: project-plan.md
plans/: 2026-04-26-vietnam-market-testing-plan.md  2026-04-30-climate-mayor-plan.md  2026-05-20-climate-mayor-gamification-plan.md  2026-05-23-coop-facilitator-workshop-plan.md  2026-05-23-data-export-compliance-consistency-plan.md  2026-05-23-fix-solo-gameplay-bugs-plan.md  2026-05-29-canonical-game-stack-consolidation-plan.md  2026-05-29-engine-trim-test-unification-plan.md  2026-05-29-game-focus-roadmap-index.md  2026-05-29-repo-reorganization-cleanup-plan.md  2026-05-29-singleplayer-multiplayer-buildout-plan.md  2026-05-29-visual-step-change-plan.md  2026-06-13-isometric-renderer-plan.md  2026-06-13-retro-asset-pipeline-plan.md  2026-06-13-retro-design-tokens-plan.md  project-plan.md  (+11 more)
(+188 files in other folders)
